# mcp2skill

./: .gitignore  README.md  pyproject.toml
mcp2cli/: main.py  scanner.py
mcp2cli/batch/: __init__.py  converter.py  fetcher.py  models.py
mcp2cli/config/: models.py
mcp2cli/converter/: config_disabler.py
mcp2cli/generator/: cli_gen.py  skill_gen.py  validator.py
mcp2cli/generator/templates/: cli_gen_example.md  cli_gen_skill.md
mcp2cli/installer/: ai_search.py  interactive.py  pipeline.py
mcp2cli/preset/: checker.py  downloader.py  exporter.py  models.py  pusher.py
mcp2cli/remover/: config_re_enabler.py
presets/: index.json
presets/agentops-mcp/0.3.0/: cli.yaml  manifest.json  tools.json
presets/aws-mcp/3.2.0/: cli.yaml  manifest.json  tools.json
presets/beads/3.2.0/: cli.yaml  manifest.json  tools.json
presets/bigquery-mcp/0.1.0/: cli.yaml  manifest.json  tools.json
presets/blender-mcp/1.27.0/: cli.yaml  manifest.json  tools.json
presets/browser-mcp/0.1.3/: cli.yaml  manifest.json  tools.json
presets/chrome-devtools-mcp/0.21.0/: cli.yaml  manifest.json  tools.json
presets/cloudflare-mcp/0.4.6/: cli.yaml  manifest.json  tools.json
presets/context7/2.1.6/: cli.yaml  manifest.json  tools.json
presets/dayuanjiang-next-ai-draw-io/0.1.2/: manifest.json  tools.json
presets/fastmcp-demo/3.2.0/: cli.yaml  manifest.json  tools.json
presets/filesystem-mcp/0.2.0/: cli.yaml  manifest.json  tools.json
presets/memory-mcp/0.6.3/: cli.yaml  manifest.json  tools.json
tests/: test_config_disabler.py
top100/: mcptop100.batch.json
(+143 files in other folders)
